@@ -1,5 +1,9 @@
 2009-05-14  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* ld-spu/icache1.d: Update for compact stubs.
+
+2009-05-14  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* ld-spu/icache1.d: Update all addresses to accomodate icache
 	buffer shifted down 0x800 bytes.
 
